creating vector embeddigns for notes

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^1.0.20",
+    "@ai-sdk/google": "^2.0.17",
+    "@ai-sdk/huggingface": "^0.0.1",
     "@ai-sdk/openai": "^2.0.0-alpha.12",
     "@ai-sdk/provider": "^2.0.0",
     "@ai-sdk/react": "^2.0.60",
