--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^1.0.20",
+    "@ai-sdk/gateway": "^1.0.33",
     "@ai-sdk/google": "^2.0.17",
     "@ai-sdk/huggingface": "^0.0.1",
     "@ai-sdk/openai": "^2.0.0-alpha.12",
@@ -27,7 +28,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.24.8",
     "lucide-react": "^0.514.0",
-    "next": "15.3.3",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -35,7 +36,7 @@
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.62"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -48,6 +49,6 @@
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
