--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.24.8",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.514.0",
     "next": "^15.5.4",
     "next-themes": "^0.4.6",
